[package]
name = "rcsv-lfiles"
version = "0.1.0"
authors = ["1garo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
nodejs-sys = "0.2.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.123"
concat-reader = "0.1.0"